--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,3 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:600);
+
+/*body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+}*/
+
 .container {
   display: flex;
   min-height: 100vh;
@@ -18,9 +26,11 @@
 }
 
 .s-logo {
-  font-size: 40px;
+  font-size: 35px;
   text-align: center;
   margin: 20px 0;
+  font-family: 'georgia';
+  font-weight: bold;
 }
 
 .s-groups {
